--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   http: ^0.13.5
   visibility_aware_state: ^1.0.5
   local_auth: ^2.1.2
+  qr_code_scanner: ^1.0.1
 
 dev_dependencies:
   flutter_test:
