--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -5,6 +5,7 @@
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.USE_BIOMETRIC"/>
    <application
+        android:usesCleartextTraffic="true"
         android:label="nuzai_wallet"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
