--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,6 +47,7 @@ dependencies:
   easy_localization: ^3.0.1
   pin_code_fields: ^7.4.0
   babylonjs_viewer: ^1.1.0
+  mobile_scanner: ^2.0.0
 
 dev_dependencies:
   flutter_test:
