v 2.1.0 - AR test version with ducks

--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -57,3 +57,10 @@ android {
 flutter {
     source '../..'
 }
+
+dependencies {
+    implementation 'com.google.ar.sceneform.ux:sceneform-ux:1.11.0'
+// Alternatively, use ArSceneView without the UX dependency.
+    implementation 'com.google.ar.sceneform:core:1.11.0'
+    implementation 'com.google.ar:core:1.11.0'
+}
