--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,11 +43,16 @@ dependencies:
   http: ^0.13.5
   visibility_aware_state: ^1.0.5
   local_auth: ^2.1.2
-  qr_code_scanner: ^1.0.1
   easy_localization: ^3.0.1
   pin_code_fields: ^7.4.0
   babylonjs_viewer: ^1.1.0
   mobile_scanner: ^2.0.0
+  arcore_flutter_plugin:
+    git:
+      url: https://github.com/KARIM2M/arcore_flutter_plugin.git
+      ref: master
+
+  ar_flutter_plugin: ^0.7.1
 
 dev_dependencies:
   flutter_test:
