--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,7 +17,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
 # In Windows, build-name is used as the major, minor, and patch parts
 # of the product and file versions while build-number is used as the build suffix.
-version: 1.0.0+1
+version: 1.0.0+2
 
 environment:
   sdk: '>=2.18.0 <3.0.0'
@@ -47,16 +47,29 @@ dependencies:
   pin_code_fields: ^7.4.0
   babylonjs_viewer: ^1.1.0
   mobile_scanner: ^2.0.0
+  flutter_launcher_icons: "^0.10.0"
+  flutter_app_name: ^0.1.0
   arcore_flutter_plugin:
     git:
       url: https://github.com/KARIM2M/arcore_flutter_plugin.git
       ref: master
 
   ar_flutter_plugin: ^0.7.1
+  flutter_automation: ^2.0.0
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
+
+flutter_icons:
+  android: "launcher_icon"
+  ios: true
+  remove_alpha_ios: true
+  image_path: "assets/icons/Logo.png"
+  min_sdk_android: 21 # android min sdk min:16, default 21
+
+flutter_app_name:
+  name: "Nuzai Wallet"
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
