iOS pre release version

--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -53,5 +53,7 @@
     <string>This app needs camera access to scan QR codes</string>
     <key>io.flutter.embedded_views_preview</key>
     <true/>
+	<key>NSFaceIDUsageDescription</key>
+	<string>Why is my app authenticating using face id?</string>
 </dict>
 </plist>
