--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,10 +49,10 @@ dependencies:
   mobile_scanner: ^2.0.0
   flutter_launcher_icons: "^0.10.0"
   flutter_app_name: ^0.1.0
-  arcore_flutter_plugin:
-    git:
-      url: https://github.com/KARIM2M/arcore_flutter_plugin.git
-      ref: master
+  # arcore_flutter_plugin:
+  #   git:
+  #     url: https://github.com/KARIM2M/arcore_flutter_plugin.git
+  #     ref: master
 
   ar_flutter_plugin: ^0.7.1
   flutter_automation: ^2.0.0
