--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -100,6 +100,7 @@ flutter:
      - assets/icons/eye_icon.png
      - assets/icons/sent_transaction.png
      - assets/icons/received_transaction.png
+     - assets/icons/triangle.png
      - assets/icons/settings.png
 
      - assets/translations/en.json
