--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -56,7 +56,7 @@ apply from: "$flutterRoot/packages/flutter_tools/gradle/flutter.gradle"
         release {
             keyAlias keystoreProperties['keyAlias']
             keyPassword keystoreProperties['keyPassword']
-            storeFile file(keystoreProperties['storeFile'])
+            storeFile file("key.jks")
             storePassword keystoreProperties['storePassword']
         }
     }
