--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,6 +49,7 @@ dependencies:
   mobile_scanner: ^2.0.0
   flutter_launcher_icons: "^0.10.0"
   flutter_app_name: ^0.1.0
+  mnemonic: ^1.0.0
   # arcore_flutter_plugin:
   #   git:
   #     url: https://github.com/KARIM2M/arcore_flutter_plugin.git
@@ -56,6 +57,7 @@ dependencies:
 
   ar_flutter_plugin: ^0.7.1
   flutter_automation: ^2.0.0
+  flutter_keychain: ^2.2.1
 
 dev_dependencies:
   flutter_test:
