--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,5 +1,5 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.alexpan.nuzai_wallet">
+    package="io.exomal.exomal_wallet">
 
     <uses-permission android:name="android.permission.INTERNET"/>
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
@@ -8,7 +8,7 @@
     <uses-feature android:name="android.hardware.camera.ar" />
    <application
         android:usesCleartextTraffic="true"
-        android:label="Nuzai Wallet"
+        android:label="Exomal Wallet"
         android:name="${applicationName}"
         android:icon="@mipmap/launcher_icon">
         <activity
