--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,7 +47,7 @@ dependencies:
   pin_code_fields: ^7.4.0
   babylonjs_viewer: ^1.1.0
   mobile_scanner: ^2.0.0
-  flutter_launcher_icons: "^0.10.0"
+  flutter_launcher_icons: "^0.11.0"
   flutter_app_name: ^0.1.0
   mnemonic: ^1.0.0
   change_app_package_name: ^1.1.0
@@ -70,7 +70,7 @@ flutter_icons:
   android: "launcher_icon"
   ios: true
   remove_alpha_ios: true
-  image_path: "assets/icons/Logo.png"
+  image_path: "assets/icons/logo.png"
   min_sdk_android: 21 # android min sdk min:16, default 21
 
 flutter_app_name:
