--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -26,10 +26,16 @@
 	<string>$(FLUTTER_BUILD_NUMBER)</string>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
+	<key>NSBluetoothAlwaysUsageDescription</key>
+	<string>Exomal wallet need bluetooth access to work with AR view</string>
 	<key>NSCameraUsageDescription</key>
 	<string>This app needs camera access to scan QR codes</string>
 	<key>NSFaceIDUsageDescription</key>
 	<string>Why is my app authenticating using face id?</string>
+	<key>NSLocationWhenInUseUsageDescription</key>
+	<string>Exomal wallet need location access to work with AR view</string>
+	<key>NSMotionUsageDescription</key>
+	<string>Exomal wallet need motion access to work with AR view</string>
 	<key>UIApplicationSupportsIndirectInputEvents</key>
 	<true/>
 	<key>UILaunchStoryboardName</key>
@@ -59,5 +65,7 @@
     	<string>Exomal wallet need location access to work with AR view</string>
     <key>NSBluetoothAlwaysUsageDescription</key>
         <string>Exomal wallet need bluetooth access to work with AR view</string>
+	<key>CFBundlePackageType</key>
+	<string>APPL</string>
 </dict>
 </plist>
