--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,7 +20,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 version: 1.0.0+6
 
 environment:
-  sdk: '>=2.18.0 <3.0.0'
+  sdk: '>=3.0.6'
 
 # Dependencies specify other packages that your package needs in order to work.
 # To automatically upgrade your package dependencies to the latest versions
@@ -35,6 +35,7 @@ dependencies:
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
+  arkit_plugin: ^1.0.7
   cupertino_icons: ^1.0.2
   shared_preferences: ^2.0.15
   flutter_secure_storage: 4.0.0
@@ -53,15 +54,12 @@ dependencies:
   change_app_package_name: ^1.1.0
   bip39: ^1.0.6
   bip32: ^2.0.0
-  # flutter pub run change_app_package_name:main com.new.package.name
-  # arcore_flutter_plugin:
-  #   git:
-  #     url: https://github.com/KARIM2M/arcore_flutter_plugin.git
-  #     ref: master
-
   ar_flutter_plugin: ^0.7.3
   flutter_automation: ^2.0.0
   web3dart: ^2.5.1
+  arcore_flutter_plugin: ^0.1.0-null-safety.3
+  path_provider: ^2.0.3
+  dio: ^5.3.3
 
 dev_dependencies:
   flutter_test:
