--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,7 +17,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
 # In Windows, build-name is used as the major, minor, and patch parts
 # of the product and file versions while build-number is used as the build suffix.
-version: 1.0.0+9
+version: 1.0.0+10
 
 environment:
   sdk: '>=2.18.0 <3.0.0'
@@ -45,7 +45,6 @@ dependencies:
   local_auth: ^2.1.3
   easy_localization: ^3.0.1
   pin_code_fields: ^7.4.0
-  babylonjs_viewer: ^1.1.0
   mobile_scanner: ^2.0.0
   flutter_launcher_icons: "^0.11.0"
   flutter_app_name: ^0.1.0
@@ -62,6 +61,8 @@ dependencies:
   ar_flutter_plugin: ^0.7.3
   flutter_automation: ^2.0.0
   web3dart: ^2.5.1
+  flutter_ra_availability: ^1.0.0
+  o3d: ^3.1.0
 
 dev_dependencies:
   flutter_test:
@@ -116,7 +117,7 @@ flutter:
 
      - assets/abi/exomal-abi.json
 
-    #  - assets/models/exomal.gltf
+     - assets/models/Duck.glb
     #  - assets/models/exomal_blue.gltf
     #  - assets/models/exomal_red_embedded.gltf
     #  - assets/models/tiger.gltf
