--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -52,17 +52,9 @@ dependencies:
   change_app_package_name: ^1.1.0
   bip39: ^1.0.6
   bip32: ^2.0.0
-  # flutter pub run change_app_package_name:main com.new.package.name
-  # arcore_flutter_plugin:
-  #   git:
-  #     url: https://github.com/KARIM2M/arcore_flutter_plugin.git
-  #     ref: master
-
-  ar_flutter_plugin: ^0.7.3
   flutter_automation: ^2.0.0
   web3dart: ^2.5.1
-  flutter_ra_availability: ^1.0.0
-  o3d: ^3.1.0
+  model_viewer_plus: ^1.7.0
 
 dev_dependencies:
   flutter_test:
