ar android done

--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -75,8 +75,5 @@ flutter {
 }
 
 dependencies {
-    implementation 'com.google.ar.sceneform.ux:sceneform-ux:1.8.0'
-// Alternatively, use ArSceneView without the UX dependency.
-    implementation 'com.google.ar.sceneform:core:1.8.0'
-    implementation 'com.google.ar:core:1.16.0'
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
 }
